[package]
name = "nautilus-live"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core live trading components and machinery for the Nautilus trading engine"
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "nautilus_live"
crate-type = ["rlib"]

[features]
default = ["node"]
node = [
  "dep:nautilus-data",
  "dep:nautilus-portfolio",
  "dep:nautilus-risk",
  "dep:nautilus-system",
  "dep:nautilus-trading",
]
examples = ["node", "nautilus-trading/examples"]
streaming = ["node", "nautilus-persistence", "nautilus-system/streaming"]
extension-module = [
  "nautilus-common/extension-module",
  "nautilus-core/extension-module",
  "nautilus-execution/extension-module",
  "nautilus-model/extension-module",
  "python",
  "pyo3/extension-module",
  "streaming",
]
ffi = ["nautilus-common/ffi", "nautilus-core/ffi", "nautilus-model/ffi"]
python = [
  "node",
  "nautilus-common/python",
  "nautilus-core/python",
  "nautilus-execution/python",
  "nautilus-model/python",
  "nautilus-persistence?/python",
  "nautilus-portfolio/python",
  "nautilus-system/python",
  "nautilus-trading/python",
  "pyo3",
  "pyo3-stub-gen",
  "streaming",
]
defi = ["dep:nautilus-data", "nautilus-common/defi", "nautilus-data/defi"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nautilus-common = { workspace = true, features = ["live"] }
nautilus-core = { workspace = true }
nautilus-execution = { workspace = true }
nautilus-model = { workspace = true, features = ["stubs"] }

nautilus-data = { workspace = true, optional = true }
nautilus-persistence = { workspace = true, optional = true }
nautilus-portfolio = { workspace = true, optional = true }
nautilus-risk = { workspace = true, optional = true }
nautilus-system = { workspace = true, features = ["live"], optional = true }
nautilus-trading = { workspace = true, optional = true }

ahash = { workspace = true }
anyhow = { workspace = true }
bon = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
ustr = { workspace = true }

pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }

[dev-dependencies]
async-trait = { workspace = true }
criterion = { workspace = true }
rstest = { workspace = true }
rust_decimal_macros = { workspace = true }
ustr = { workspace = true }

# Run with `cargo bench -p nautilus-live --bench runner`
[[bench]]
name = "runner"
harness = false

[[test]]
name = "manager"
path = "tests/manager.rs"
required-features = ["node"]

[[test]]
name = "node"
path = "tests/node.rs"
required-features = ["node"]
