[package]
name = "nautilus-live"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core live trading components and machinery for the Nautilus trading engine"
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "nautilus_live"
crate-type = ["rlib"]

[features]
default = ["node", "plugin"]
node = [
  "dep:nautilus-data",
  "dep:nautilus-portfolio",
  "dep:nautilus-risk",
  "dep:nautilus-system",
  "dep:nautilus-trading",
]
plugin = ["node"]
examples = ["node", "dep:nautilus-testkit", "nautilus-trading/examples"]
streaming = [
  "node",
  "dep:chrono-tz",
  "dep:futures",
  "dep:object_store",
  "nautilus-persistence",
  "nautilus-system/streaming",
]
extension-module = [
  "nautilus-common/extension-module",
  "nautilus-core/extension-module",
  "nautilus-execution/extension-module",
  "nautilus-model/extension-module",
  "python",
  "pyo3/extension-module",
  "streaming",
]
ffi = ["nautilus-common/ffi", "nautilus-core/ffi", "nautilus-model/ffi"]
python = [
  "node",
  "nautilus-common/python",
  "nautilus-core/python",
  "nautilus-execution/python",
  "nautilus-model/python",
  "nautilus-persistence?/python",
  "nautilus-portfolio/python",
  "nautilus-system/python",
  "nautilus-testkit?/python",
  "nautilus-trading/python",
  "pyo3",
  "pyo3-stub-gen",
  "streaming",
]
defi = [
  "dep:nautilus-data",
  "nautilus-common/defi",
  "nautilus-data/defi",
  "nautilus-persistence?/defi",
]
simulation = [
  "node",
  "nautilus-common/simulation",
  "nautilus-execution/simulation",
]

[package.metadata.cargo-machete]
ignored = [
  "nautilus-persistence",
] # Optional dep activated only via the streaming feature

[package.metadata.docs.rs]
# Python docs depend on the local pyo3-stub-gen patch for now, which published crates do not carry
features = [
  "defi",
  "examples",
  "ffi",
  "node",
  "plugin",
  "simulation",
  "streaming",
]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nautilus-common = { workspace = true, features = ["live"] }
nautilus-core = { workspace = true }
nautilus-execution = { workspace = true }
nautilus-model = { workspace = true, features = ["stubs"] }

nautilus-data = { workspace = true, optional = true }
nautilus-persistence = { workspace = true, optional = true }
nautilus-portfolio = { workspace = true, optional = true }
nautilus-risk = { workspace = true, optional = true }
nautilus-system = { workspace = true, features = ["live"], optional = true }
nautilus-testkit = { workspace = true, optional = true }
nautilus-trading = { workspace = true, optional = true }

ahash = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bon = { workspace = true }
chrono-tz = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
indexmap = { workspace = true }
log = { workspace = true }
object_store = { workspace = true, optional = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
ustr = { workspace = true }

pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }

[dev-dependencies]
bytes = { workspace = true }
criterion = { workspace = true }
madsim = { workspace = true }
rstest = { workspace = true }
rust_decimal_macros = { workspace = true }
toml = { workspace = true }
ustr = { workspace = true }

# Run with `cargo bench -p nautilus-live --bench runner`
[[bench]]
name = "runner"
harness = false

[[test]]
name = "manager"
path = "tests/manager.rs"
required-features = ["node"]

[[test]]
name = "node"
path = "tests/node.rs"
required-features = ["node"]

[[test]]
name = "stress"
path = "tests/stress.rs"
required-features = ["node"]
