[package]
name = "nautilus-model"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Domain model for the Nautilus trading engine"
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "nautilus_model"
crate-type = ["rlib", "staticlib"]

[features]
default = []
extension-module = [
  "nautilus-core/extension-module",
  "python",
  "pyo3/extension-module",
]
ffi = ["cbindgen", "nautilus-core/ffi"]
python = ["nautilus-core/python", "pyo3", "pyo3-stub-gen"]
stubs = ["rstest"]
high-precision = []
# DeFi domain model requires 18-decimal wei precision, implying `high-precision`
defi = ["alloy-primitives", "high-precision"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nautilus-core = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
enum_dispatch = { workspace = true }
evalexpr = { workspace = true }
hex = { workspace = true }
implied-vol = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }
thousands = { workspace = true }
ustr = { workspace = true }
tracing = { workspace = true }

alloy-primitives = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
iai = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true, optional = true }

[[bench]]
name = "book_iai"
path = "benches/book_iai.rs"
harness = false

[[bench]]
name = "fixed_precision_criterion"
path = "benches/fixed_precision_criterion.rs"
harness = false

[[bench]]
name = "fixed_precision_iai"
path = "benches/fixed_precision_iai.rs"
harness = false
