[package]
name = "nautilus-network"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "nautilus_network"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []
extension-module = [
  "pyo3/extension-module",
  "nautilus-core/extension-module",
]
python = ["pyo3", "pyo3-async-runtimes", "nautilus-core/python"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nautilus-core = { workspace = true }
nautilus-cryptography = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
rand = { workspace = true }
reqwest = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
dashmap = "6.1.0"
http = "1.2.0"
nonzero_ext = "0.3.0"
rustls = { version = "0.23.26", features = ["ring"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.2"
webpki-roots = "0.26.8"

[dev-dependencies]
nautilus-common = { path = "../common" }
axum = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
rstest = { workspace = true }
tracing-test = { workspace = true }
